Fix visible container width animation on load bug

--- a/styles/page/Layout.module.scss
+++ b/styles/page/Layout.module.scss
@@ -100,10 +100,6 @@
     transition: width 400ms;
   }
 
-  .bg-loading .container {
-    width: 100%;
-  }
-
   .content {
     justify-content: flex-start;
     padding-bottom: 2rem;
